Change z-index to avoid viewing like button on map (mobile)
	fix #385

--- a/src/app/detail/styles/_detail-map.scss
+++ b/src/app/detail/styles/_detail-map.scss
@@ -3,7 +3,7 @@
  */
 
 .detail-map {
-    z-index: 2;
+    z-index: 3;
 
     padding: 0;
 
